Closed Bug 959334 Opened 10 years ago Closed 10 years ago

Invoking js_InitTypedObjectModuleObject or js_InitSIMDClass in GlobalObject::initStandardClasses causes mochitest-plain to fail

Categories

(Core :: JavaScript Engine, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: bholley, Assigned: nmatsakis)

References

Details

Attachments

(1 file)

In bug 959013, I'm cleaning up GlobalObject::initStandardClasses so that it just iterates over the proto keys and invokes all the initializers as appropriate. In doing so, I appear to have broken mochitest-plain. I narrowed it down, and it appears that js_InitTypedObjectModuleObject gets invoked where it didn't before. Apparently we currently do lazy resolution, but eager resolution breaks somehow.

Niko is going to take a look.
Also happens with js_InitSIMDClass.
Summary: Invoking js_InitTypedObjectModuleObject in GlobalObject::initStandardClasses causes mochitest-plain to fail → Invoking js_InitTypedObjectModuleObject or js_InitSIMDClass in GlobalObject::initStandardClasses causes mochitest-plain to fail
Attached patch Bug959334.diffSplinter Review
Since SIMD also invokes this class, this will likely address that case too, though I guess it merits review to make sure we didn't make a similar mistake there.
Attachment #8359437 - Flags: review?(jwalden+bmo)
Attachment #8359437 - Flags: review?(jwalden+bmo) → review+
Blocks: 962449
No longer blocks: 959013
I've got this in a patch queue that I'll be landing shortly. I'll land this along with it, unless anyone objects.
I have no objection.
https://hg.mozilla.org/mozilla-central/rev/a44f13894eb0
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: